--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "cheerio": "^1.0.0",
     "mongodb": "^5.9.2",
+    "multer": "^1.4.5-lts.1",
     "node-mailjet": "^6.0.5",
     "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.0",
@@ -39,6 +42,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
